Archive2/3c/dbc8aa336fc576/output
main.cpp: In function 'int main()':
main.cpp:6:28: error: 'printf' was not declared in this scope
     printf( "enter size: " );
                            ^
main.cpp:7:24: error: 'scanf' was not declared in this scope
     scanf( "%d", &size );
                        ^
main.cpp:9:17: error: ISO C++ forbids variable length array 'a' [-Wvla]
     int a[ size ];
                 ^
main.cpp:9:9: warning: unused variable 'a' [-Wunused-variable]
     int a[ size ];
         ^
