Archive2/3c/dbc8aa336fc576/main.cpp
#include <stdlib.h>

int main()
{
    int size = 0;
    printf( "enter size: " );
    scanf( "%d", &size );
    
    int a[ size ];
    
    return 0;
}